# ffmpeg-py-gui

./: .copier-answers.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  opencode.json  pyproject.toml  zensical.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
docs/.overrides/partials/: comments.html
docs/reference/: api.md
scripts/: gen_credits.py
src/ffmpeg_py_gui/: __init__.py  __main__.py  main.py  models.py
src/ffmpeg_py_gui/_internal/: cli.py  debug.py  ffmpeg_api.py
src/ffmpeg_py_gui/gui/: user_interface.py
tests/: __init__.py  test_api.py  test_cli.py
