[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ffmpeg-py-gui"
description = "a simple ffmpeg py gui"
authors = [{name = "schumischumi", email = "sebastian.schumacher@protonmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.3.1",
    "pyside6>=6.10.2",
]

[project.urls]
Homepage = "https://schumischumi.github.io/ffmpeg-py-gui"
Documentation = "https://schumischumi.github.io/ffmpeg-py-gui"
Changelog = "https://schumischumi.github.io/ffmpeg-py-gui/changelog"
Repository = "https://github.com/schumischumi/ffmpeg-py-gui"
Issues = "https://github.com/schumischumi/ffmpeg-py-gui/issues"
Discussions = "https://github.com/schumischumi/ffmpeg-py-gui/discussions"
Gitter = "https://gitter.im/ffmpeg-py-gui/community"
Funding = "https://github.com/sponsors/schumischumi"

[project.scripts]
ffmpeg-py-gui = "ffmpeg_py_gui.cli:main"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "zensical.toml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    {path = "share/**/*", relative-to = "."},
]

[dependency-groups]
maintain = [
    "git-changelog>=2.5",
    "twine>=5.1",
    "yore>=0.3.3",
]
ci = [
    "duty>=1.6",
    "griffe>=2.0",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "ruff>=0.4",
    "ty>=0.0.14",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
]
 docs = [
    "ghp-import>=2.1",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocstrings[python]>=0.29",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
    "zensical>=0.0.21",
]

[tool.uv]
default-groups = ["maintain", "ci", "docs"]
